--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Living Goddesses | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 minutes ago</div>
+                        <div class="date">48 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>18 Japanese Self-Care Habits That ACTUALLY Work</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>ArthurTV gets Rizzed Up😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Jim Simons' lessons from the Medallion Fund</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Understanding the Root of Need</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -530,7 +530,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 04.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1674,7 +1674,7 @@
                     <div class="video-info">
                         <h3>From Lazy to Disciplined – 6 Japanese Tiny Habits That Changed My Life</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Jim Simons' lessons from the Medallion Fund</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5873,7 +5873,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 04.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Living Goddesses | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 minutes ago</div>
+                            <div class="date">48 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Understanding the Root of Need</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8890,7 +8890,7 @@
                         <div class="video-info">
                             <h3>18 Japanese Self-Care Habits That ACTUALLY Work</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8923,7 +8923,7 @@
                         <div class="video-info">
                             <h3>From Lazy to Disciplined – 6 Japanese Tiny Habits That Changed My Life</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>ArthurTV gets Rizzed Up😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
