--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The WORST Timing Ever</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">49 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>What Humanity Truly Needs | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>How to Build a Seasonal Edge in StrategyQuantX 🔧 (Gold Example 💡)</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1091,7 +1091,7 @@
                     <div class="video-info">
                         <h3>3 long term strategies that work (Backtested with Rules)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5774,7 +5774,7 @@
                         <div class="video-info">
                             <h3>How to Build a Seasonal Edge in StrategyQuantX 🔧 (Gold Example 💡)</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5994,7 +5994,7 @@
                         <div class="video-info">
                             <h3>3 long term strategies that work (Backtested with Rules)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>What Humanity Truly Needs | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>The WORST Timing Ever</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">49 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
